Reverted stream collectors and optimized some things